generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  ADMIN
  PUBLISHER
  SUBSCRIBER
}

model User {
  id        String   @id @default(cuid())
  email     String   @unique
  password  String
  name      String
  role      UserRole @default(SUBSCRIBER)
  emailVerified Boolean @default(false)
  emailVerificationToken String?
  passwordResetToken String?
  passwordResetExpires DateTime?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  magazines Magazine[] @relation("PublisherMagazines")
  comments  Comment[]
  subscriptions Subscription[]
  activities ActivityLog[]
  refreshTokens RefreshToken[]
  @@index([role])
}

model Magazine {
  id        String   @id @default(cuid())
  title     String
  description String
  publisher   User     @relation("PublisherMagazines", fields: [publisherId], references: [id])
  publisherId String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  subscriptions Subscription[]
  comments  Comment[]
  @@index([publisherId])
}

enum SubscriptionStatus {
  PENDING
  ACTIVE
  EXPIRED
  CANCELLED
}

model Subscription {
  id          String   @id @default(cuid())
  user        User     @relation(fields: [userId], references: [id])
  userId      String
  magazine    Magazine @relation(fields: [magazineId], references: [id])
  magazineId  String
  status      SubscriptionStatus @default(PENDING)
  startDate   DateTime?
  endDate     DateTime?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  @@unique([userId, magazineId])
  @@index([status, endDate])
}

model Comment {
  id         String   @id @default(cuid())
  content    String
  author     User     @relation(fields: [authorId], references: [id])
  authorId   String
  magazine   Magazine @relation(fields: [magazineId], references: [id])
  magazineId String
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  approved   Boolean  @default(false)
}

model ActivityLog {
  id        String   @id @default(cuid())
  actor     User?    @relation(fields: [actorId], references: [id])
  actorId   String?
  action    String
  meta      Json?
  createdAt DateTime @default(now())
}

model RefreshToken {
  id        String   @id @default(cuid())
  token     String   @unique
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt DateTime
  createdAt DateTime @default(now())
  @@index([userId])
  @@index([expiresAt])
}

model BlacklistedToken {
  id        String   @id @default(cuid())
  token     String   @unique
  createdAt DateTime @default(now())
  @@index([token])
}

